--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ body {
 
 .app {
   background-color: var(--accent-bg-color);
+  background-image: url(https://i.pinimg.com/474x/30/0e/c3/300ec3cc9060b711be258cd0a5d4ac6a.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh; /* fill the screen */
   display: flex;
   flex-direction: column;
@@ -63,6 +67,11 @@ body {
 
 .form {
   display: flex;
+  color: var(--main-bg-color);
+  background-color: #9c93b5;
+  padding: 10px;
+  border-radius: 10px;
+  border: solid 2px var(--accent-font-color);
   flex-direction: column;
   gap: 10px;
   width: 100%;
@@ -78,14 +87,23 @@ select {
   font-family: inherit;
 }
 
+.pdf-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .project-card {
   color: var(--main-font-color);
   background-color: var(--main-bg-color);
-  width: 210mm;
-  text-align: center;
+  max-width: 170mm;
   padding: 20mm;
   border-radius: 10px;
   border: solid 2px var(--accent-font-color);
+  box-sizing: border-box;
 }
 
 .project-card h2 {
